[package]
name = "handoff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.25", default-features = false }
thiserror = { version = "1.0.38", default-features = false }
twinsies = "1.1.0"
