[package]
name = "handoff"
version = "1.0.1"
edition = "2021"
authors = ["Nathan West <Lucretiel@gmail.com>"]

readme = "README.md"
license = "MPL-2.0"
description = "An unbuffered, asynchronous, single-producer/single-consumer channel"
repository = "https://github.com/Lucretiel/handoff"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.26", default-features = false }
pin-project = "1.0.12"
pinned-aliasable = "0.1.3"
thiserror = { version = "1.0.38", default-features = false }
twinsies = "1.1.0"

[dev-dependencies]
cool_asserts = "2.0.3"
futures = { version = "0.3.25", default-features = false, features = [
    "executor",
] }
tokio = { version = "1.25.0", default-features = false, features = [
    "rt",
    "test-util",
    "macros",
    "rt-multi-thread",
] }
